@@ -5,5 +5,9 @@
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
 MOD_LANGUAGES="Languages"
-MOD_LANGUAGES_DESC="Languages switcher"
+MOD_LANGUAGES_FIELD_FOOTER_LABEL="Footer"
+MOD_LANGUAGES_FIELD_FOOTER_DESC="Text entered here will display below the language dropdown"
+MOD_LANGUAGES_FIELD_HEADER_LABEL="Header"
+MOD_LANGUAGES_FIELD_HEADER_DESC="Text entered here will display above the language dropdown"
+MOD_LANGUAGES_XML_DESCRIPTION="Languages switcher"
 
