@@ -36,6 +36,7 @@ $ -> Language fix or change
 ^ Refactored mod_banners ini/keys
 ^ Refactored mod_breadcrumbs ini/keys
 ^ Refactored mod_footer ini/keys
+^ Refactored mod_languages ini/keys
 
 09-Feb-2010 Jean-Marie Simonet
 ^ Refactored mod_articles_archived ini/keys. Updated sql.
